1)Сохранил тип пользователя в сессии, получил и использовал тип пользователя на клиенте 2)сделал боковое меню для личных кабинетов по типам пользователей

--- a/germax-frontend/src/templates/components/content-page-client-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-client-management/index.html
@@ -125,6 +125,8 @@
 							<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
 								<li><a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
 										data-bs-target="#detailsModal">Voir les détails des locations</a></li>
+								<li><a class="dropdown-item view-details" href="#" data-bs-toggle="modal"
+										data-bs-target="#detailsClientModal">Voir les détails du client</a></li>
 								<li><a class="dropdown-item write-to-manager-action" href="#" data-bs-toggle="modal"
 										data-bs-target="#communication-client">Contacter le client</a></li>
 								<li><a class="dropdown-item delete-client" href="#">Bloquer</a></li>
@@ -202,4 +204,20 @@
 			</tbody>
 		</table>
 	</div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="detailsClientModal" tabindex="-1" aria-labelledby="detailsClientModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="detailsClientModalLabel">Détails du client</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Сюда будет загружено содержимое -->
+      </div>
+    </div>
+  </div>
 </div>
