--- a/germax-frontend/src/templates/mocks/users/stockman/dashboard.html
+++ b/germax-frontend/src/templates/mocks/users/stockman/dashboard.html
@@ -27,8 +27,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="./subpages/support.html" data-toggle="modal"
-							data-target="#supportModal">
+						<a class="nav-link" href="./subpages/support.html" data-toggle="modal" data-target="#supportModal">
 							<i class="fa fa-question-circle">Support</i>
 						</a>
 					</li>
@@ -61,19 +60,24 @@
 			<div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
 				<a class="nav-link active" id="locationsLink" href="./dashboard.html">Profil</a>
 				<a class="nav-link" id="locationsLink" href="./subpages/futureReservations.html">Réservations</a>
-				<a class="nav-link" id="reservations-echeance-link" href="./subpages/reservationsApproachingExpiry.html" role="tab" data-toggle="pill">Réservations arrivant à échéance</a>
-				<a class="nav-link" id="materiels-maintenance-link" href="./subpages/equipmentUnderRepair.html" role="tab" data-toggle="pill">Matériel en maintenance</a>
-				<a class="nav-link" id="materiels-attente-maintenance-link" href="./subpages/equipmentAwaitingRepair.html" role="tab" data-toggle="pill">Matériel en attente de maintenance</a>
-				<a class="nav-link" id="materiels-signalement-link" href="./subpages/equipmentWithRemarks.html" role="tab" data-toggle="pill">Matériel avec signalement</a>
-				<a class="nav-link" id="materiels-signalement-link" href="./subpages/equipmentOrders.html" role="tab" data-toggle="pill">Commandes du nouveau matériel</a>
-				<a class="nav-link" id="materiels-signalement-link" href="./subpages/communicationWithRentalManagers.html" role="tab" data-toggle="pill">Contacter le gestionnaire de locations</a>
-			  </div>
+				<a class="nav-link" id="reservations-echeance-link" href="./subpages/reservationsApproachingExpiry.html"
+					role="tab" data-toggle="pill">Réservations arrivant à échéance</a>
+				<a class="nav-link" id="materiels-maintenance-link" href="./subpages/equipmentUnderRepair.html" role="tab"
+					data-toggle="pill">Matériel en maintenance</a>
+				<a class="nav-link" id="materiels-attente-maintenance-link" href="./subpages/equipmentAwaitingRepair.html"
+					role="tab" data-toggle="pill">Matériel en attente de maintenance</a>
+				<a class="nav-link" id="materiels-signalement-link" href="./subpages/equipmentWithRemarks.html" role="tab"
+					data-toggle="pill">Matériel avec signalement</a>
+				<a class="nav-link" id="materiels-signalement-link" href="./subpages/equipmentOrders.html" role="tab"
+					data-toggle="pill">Commandes du nouveau matériel</a>
+				<a class="nav-link" id="materiels-signalement-link" href="./subpages/communicationWithRentalManagers.html"
+					role="tab" data-toggle="pill">Contacter le gestionnaire de locations</a>
+			</div>
 			<div class="content">
 				<div class="row mb-4">
 					<div class="col-md-4">
 						<div class="profile-img">
-							<img src="https://via.placeholder.com/150" alt="фото профиля" class="img-thumbnail"
-								id="profile-picture">
+							<img src="https://via.placeholder.com/150" alt="фото профиля" class="img-thumbnail" id="profile-picture">
 							<label for="file-upload" class="custom-file-upload fas" title="chargez votre photo">
 								<input id="file-upload" type="file" style="display:none;" onchange="loadFile(event)" />
 							</label>
