--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -34,7 +34,7 @@
     <div class="row">
       <div class="col-md-3">
         <div class="list-group">
-          <!-- Содержимое меню формируется динамически -->
+          <div id="dynamicMenu"></div>
         </div>
       </div>
       <div class="col-md-9">
