--- a/germax-frontend/src/templates/components/content-page-loans-request/index.html
+++ b/germax-frontend/src/templates/components/content-page-loans-request/index.html
@@ -66,7 +66,7 @@
 		склада.</p>
 	<hr class="my-4">
 	<p>Просто заполните форму ниже, и мы с вами свяжемся.</p>
-	<a class="btn btn-primary btn-lg" href="./form.html" role="button">Перейти к форме</a>
+	<a class="btn btn-primary btn-lg" href="/page-loans-form" role="button">Перейти к форме</a>
 </div>
 
 <footer class="footer mt-auto py-3 bg-light">
