горизонтальное меню для stockman, включая support (не работает закрытие notifications, закрытие support работает)

--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -6,7 +6,9 @@
 		<div class="collapse navbar-collapse justify-content-end" id="horizontalNavbar">
 			<!-- генерация вертикального меню -->
 		</div>
-		<div id="modalPlace"> <!-- Положение для модального окна -->
+		<div id="modalPlace">
+		</div>
+		<div id="modalSupport">
 		</div>
 	</nav>
 	 <!-- Контейнер для вкладок, расположенный прямо под навигацией -->
