--- a/germax-frontend/src/templates/components/content-page-loans-request/index.html
+++ b/germax-frontend/src/templates/components/content-page-loans-request/index.html
@@ -1,13 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 	<a class="navbar-brand" href="#">Логотип Компании</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-		aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav"
+		aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 	</button>
 	<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav">
 			<li class="nav-item active">
-				<a class="nav-link" href="../../dashboard.html">Retour à la page principale <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="../../dashboard.html">Retour à la page principale <span
+						class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#requestForm">Запрос на аренду</a>
@@ -31,18 +32,13 @@
 					<div class="row">
 						<div id="type-filter" class="col-md-3">
 							<div class="list-group">
-								<a href="#" class="list-group-item list-group-item-action"
-									data-type="laptop">Ordinateurs portables</a>
-								<a href="#" class="list-group-item list-group-item-action"
-									data-type="сomputer_monitor">Ecrans d'ordinateurs</a>
-								<a href="#" class="list-group-item list-group-item-action"
-									data-type="smartphone">Smartphones</a>
-								<a href="#" class="list-group-item list-group-item-action"
-									data-type="accessory">Accessoires</a>
-								<a href="#" class="list-group-item list-group-item-action"
-									data-type="tablet">Tablettes</a>
-								<a href="#" class="list-group-item list-group-item-action"
-									data-type="VR_headset">Casque VR</a>
+								<a href="#" class="list-group-item list-group-item-action" data-type="laptop">Ordinateurs portables</a>
+								<a href="#" class="list-group-item list-group-item-action" data-type="сomputer_monitor">Ecrans
+									d'ordinateurs</a>
+								<a href="#" class="list-group-item list-group-item-action" data-type="smartphone">Smartphones</a>
+								<a href="#" class="list-group-item list-group-item-action" data-type="accessory">Accessoires</a>
+								<a href="#" class="list-group-item list-group-item-action" data-type="tablet">Tablettes</a>
+								<a href="#" class="list-group-item list-group-item-action" data-type="VR_headset">Casque VR</a>
 							</div>
 						</div>
 						<div id="equipment-list" class="col-md-9">
