--- a/germax-frontend/src/templates/mocks/users/rentalManager/subpages/client/addClient.html
+++ b/germax-frontend/src/templates/mocks/users/rentalManager/subpages/client/addClient.html
@@ -22,11 +22,11 @@
 			<div class="col">
 				<ul class="nav nav-tabs" id="myTab" role="tablist">
 					<li class="nav-item">
-						<a class="nav-link active" id="students-tab" data-toggle="tab" href="#students" role="tab"
+						<a class="nav-link active" id="students-tab" data-bs-toggle="tab" href="#students" role="tab"
 							aria-controls="students" aria-selected="true">Élèves</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" id="teachers-tab" data-toggle="tab" href="#teachers" role="tab"
+						<a class="nav-link" id="teachers-tab" data-bs-toggle="tab" href="#teachers" role="tab"
 							aria-controls="teachers" aria-selected="false">Enseignants</a>
 					</li>
 				</ul>
@@ -53,16 +53,16 @@
 				<!-- Secondary Students Tabs -->
 				<ul class="nav nav-tabs mt-3">
 					<li class="nav-item">
-						<a class="nav-link active" id="devInfo-tab" data-toggle="tab" href="#devInfo" role="tab"
+						<a class="nav-link active" id="devInfo-tab" data-bs-toggle="tab" href="#devInfo" role="tab"
 							aria-controls="devInfo" aria-selected="true">Étudiants Développement informatique</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" id="sysReseau-tab" data-toggle="tab" href="#sysReseau" role="tab"
+						<a class="nav-link" id="sysReseau-tab" data-bs-toggle="tab" href="#sysReseau" role="tab"
 							aria-controls="sysReseau" aria-selected="false">Étudiants Systèmes, réseaux et
 							cybersécurité</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" id="comMarketing-tab" data-toggle="tab" href="#comMarketing" role="tab"
+						<a class="nav-link" id="comMarketing-tab" data-bs-toggle="tab" href="#comMarketing" role="tab"
 							aria-controls="comMarketing" aria-selected="false">Étudiants Commerce et Marketing
 							digital</a>
 					</li>
