--- a/germax-frontend/src/templates/mocks/users/siteAdmin/subpages/equipmentManagement.html
+++ b/germax-frontend/src/templates/mocks/users/siteAdmin/subpages/equipmentManagement.html
@@ -14,9 +14,9 @@
 	<div class="container mt-4">
 		<h2>Gestion de l'Équipement</h2>
 		<div class="mb-4">
-			<button class="btn btn-primary" data-toggle="modal" data-target="#addEquipmentModal">Ajouter un
+			<button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addEquipmentModal">Ajouter un
 				équipement</button>
-			<button class="btn btn-secondary" data-toggle="modal" data-target="#addCategoryModal">Ajouter une
+			<button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#addCategoryModal">Ajouter une
 				catégorie</button>
 		</div>
 		<div class="row">
@@ -47,7 +47,7 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title" id="addEquipmentModalLabel">Ajouter un nouvel équipement</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
@@ -77,7 +77,7 @@
 					</form>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
 					<button type="button" class="btn btn-primary">Sauvegarder</button>
 				</div>
 			</div>
@@ -91,7 +91,7 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title" id="addCategoryModalLabel">Ajouter une nouvelle catégorie</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
@@ -105,7 +105,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary
-		" data-dismiss="modal">Fermer</button>
+		" data-bs-dismiss="modal">Fermer</button>
 					<button type="button" class="btn btn-primary">Sauvegarder la catégorie</button>
 				</div>
 			</div>
