--- a/germax-frontend/src/templates/mocks/users/stockman/dashboard.html
+++ b/germax-frontend/src/templates/mocks/users/stockman/dashboard.html
@@ -20,14 +20,14 @@
 			<div class="collapse navbar-collapse justify-content-end" id="navbarSupport">
 				<ul class="navbar-nav align-items-center">
 					<li class="nav-item">
-						<a class="nav-link" href="./subpages/nav/notfifcations.html" data-toggle="modal"
-							data-target="#notificationsModal">
+						<a class="nav-link" href="./subpages/nav/notfifcations.html" data-bs-toggle="modal"
+							data-bs-target="#notificationsModal">
 							<i class="fa fa-bell">Notifications</i>
 							<span class="badge badge-danger">3</span>
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="./subpages/support.html" data-toggle="modal" data-target="#supportModal">
+						<a class="nav-link" href="./subpages/support.html" data-bs-toggle="modal" data-bs-target="#supportModal">
 							<i class="fa fa-question-circle">Support</i>
 						</a>
 					</li>
@@ -37,7 +37,7 @@
 						</a>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-bs-toggle="dropdown"
 							aria-haspopup="true" aria-expanded="false">
 							<i class="fa fa-user"></i>
 						</a>
@@ -61,17 +61,17 @@
 				<a class="nav-link active" id="locationsLink" href="./dashboard.html">Profil</a>
 				<a class="nav-link" id="locationsLink" href="./subpages/futureReservations.html">Réservations</a>
 				<a class="nav-link" id="reservations-echeance-link" href="./subpages/reservationsApproachingExpiry.html"
-					role="tab" data-toggle="pill">Réservations arrivant à échéance</a>
+					role="tab" data-bs-toggle="pill">Réservations arrivant à échéance</a>
 				<a class="nav-link" id="materiels-maintenance-link" href="./subpages/equipmentUnderRepair.html" role="tab"
-					data-toggle="pill">Matériel en maintenance</a>
+					data-bs-toggle="pill">Matériel en maintenance</a>
 				<a class="nav-link" id="materiels-attente-maintenance-link" href="./subpages/equipmentAwaitingRepair.html"
-					role="tab" data-toggle="pill">Matériel en attente de maintenance</a>
+					role="tab" data-bs-toggle="pill">Matériel en attente de maintenance</a>
 				<a class="nav-link" id="materiels-signalement-link" href="./subpages/equipmentWithRemarks.html" role="tab"
-					data-toggle="pill">Matériel avec signalement</a>
+					data-bs-toggle="pill">Matériel avec signalement</a>
 				<a class="nav-link" id="materiels-signalement-link" href="./subpages/equipmentOrders.html" role="tab"
-					data-toggle="pill">Commandes du nouveau matériel</a>
+					data-bs-toggle="pill">Commandes du nouveau matériel</a>
 				<a class="nav-link" id="materiels-signalement-link" href="./subpages/communicationWithRentalManagers.html"
-					role="tab" data-toggle="pill">Contacter le gestionnaire de locations</a>
+					role="tab" data-bs-toggle="pill">Contacter le gestionnaire de locations</a>
 			</div>
 			<div class="content">
 				<div class="row mb-4">
