--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -24,6 +24,7 @@
 			</div>
 		</div>
 		<div class="col-md-9">
+			<div id="myLoans"></div>
 			<!-- Содержимое выбранной секции -->
 		</div>
 	</div>
