--- a/germax-frontend/src/templates/mocks/ifhavetime/content-page-admin-user-management/index.html
+++ b/germax-frontend/src/templates/mocks/ifhavetime/content-page-admin-user-management/index.html
@@ -132,7 +132,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="userDetailsModalLabel">Détails de l'utilisateur</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
@@ -148,7 +148,7 @@
 				</ul>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
 			</div>
 		</div>
 	</div>
@@ -160,7 +160,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<h5 class="modal-title" id="sendMessageModalLabel">Отправить сообщение пользователю</h5>
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
@@ -174,7 +174,7 @@
 				</form>
 			</div>
 			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
 				<button type="button" class="btn btn-primary">Отправить</button>
 			</div>
 		</div>
