--- a/germax-frontend/src/templates/mocks/users/siteAdmin/dashboard.html
+++ b/germax-frontend/src/templates/mocks/users/siteAdmin/dashboard.html
@@ -17,8 +17,8 @@
 		<div class="collapse navbar-collapse justify-content-end" id="navbarSupport">
 			<ul class="navbar-nav align-items-center">
 				<li class="nav-item">
-					<a class="nav-link" href="./subpages/nav/notfifcations.html" data-toggle="modal"
-						data-target="#notificationsModal">
+					<a class="nav-link" href="./subpages/nav/notfifcations.html" data-bs-toggle="modal"
+						data-bs-target="#notificationsModal">
 						<i class="fa fa-bell">Notifications</i>
 						<span class="badge badge-danger">3</span>
 					</a>
@@ -29,7 +29,7 @@
 					</a>
 				</li>
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-bs-toggle="dropdown"
 						aria-haspopup="true" aria-expanded="false">
 						<i class="fa fa-user"></i>
 					</a>
