--- a/germax-frontend/src/templates/mocks/users/siteAdmin/subpages/nav/notifications.html
+++ b/germax-frontend/src/templates/mocks/users/siteAdmin/subpages/nav/notifications.html
@@ -5,7 +5,7 @@
 	  <div class="modal-content">
 		<div class="modal-header">
 		  <h5 class="modal-title" id="notificationsModalLabel">Уведомления</h5>
-		  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+		  <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
 			<span aria-hidden="true">&times;</span>
 		  </button>
 		</div>
@@ -13,8 +13,8 @@
 		  <!-- Список уведомлений -->
 		</div>
 		<div class="modal-footer">
-		  <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+		  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
 		</div>
 	  </div>
 	</div>
-  </div>
+</div>
