--- a/germax-frontend/src/templates/mocks/users/siteAdmin/subpages/reports.html
+++ b/germax-frontend/src/templates/mocks/users/siteAdmin/subpages/reports.html
@@ -12,7 +12,7 @@
 <div class="container mt-4">
     <h2>Rapports d'Utilisation</h2>
     <div class="mb-3">
-        <button class="btn btn-primary" data-toggle="modal" data-target="#generateReportModal">Générer un Rapport</button>
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#generateReportModal">Générer un Rapport</button>
     </div>
     <div id="reportsSection">
         <!-- Reports generated will be displayed here -->
@@ -25,7 +25,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="generateReportModalLabel">Générer un Rapport</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -47,7 +47,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
         <button type="button" class="btn btn-primary">Générer</button>
       </div>
     </div>
