--- a/germax-frontend/src/templates/mocks/users/siteAdmin/subpages/reservationManagement.html
+++ b/germax-frontend/src/templates/mocks/users/siteAdmin/subpages/reservationManagement.html
@@ -38,7 +38,7 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title" id="conflictResolutionModalLabel">Разрешение конфликта бронирования</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
@@ -54,7 +54,7 @@
 					</form>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
 					<button type="button" class="btn btn-primary">Применить решение</button>
 				</div>
 			</div>
