--- a/germax-frontend/src/templates/mocks/users/siteAdmin/subpages/userManagement.html
+++ b/germax-frontend/src/templates/mocks/users/siteAdmin/subpages/userManagement.html
@@ -49,11 +49,11 @@
 		</div>
 		<div class="row mt-3">
 			<div class="col-12 d-flex justify-content-between">
-				<button class="btn btn-info" data-toggle="modal" data-target="#userDetailsModal">Détails de
+				<button class="btn btn-info" data-bs-toggle="modal" data-bs-target="#userDetailsModal">Détails de
 					l'utilisateur</button>
 				<button class="btn btn-warning">Réinitialiser Mot de Passe</button>
 				<button class="btn btn-danger">Suspension de Compte</button>
-				<button class="btn btn-info" data-toggle="modal" data-target="#sendMessageModal">Отправить
+				<button class="btn btn-info" data-bs-toggle="modal" data-bs-target="#sendMessageModal">Отправить
 					сообщение</button>
 			</div>
 		</div>
@@ -66,7 +66,7 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title" id="userDetailsModalLabel">Détails de l'utilisateur</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
@@ -82,7 +82,7 @@
 					</ul>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
 				</div>
 			</div>
 		</div>
@@ -95,7 +95,7 @@
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title" id="sendMessageModalLabel">Отправить сообщение пользователю</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
@@ -109,7 +109,7 @@
 					</form>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
 					<button type="button" class="btn btn-primary">Отправить</button>
 				</div>
 			</div>
