--- a/germax-frontend/src/templates/mocks/users/student/subpages/nav/settings.html
+++ b/germax-frontend/src/templates/mocks/users/student/subpages/nav/settings.html
@@ -16,11 +16,11 @@
 	<div class="container py-5">
 		<ul class="nav nav-tabs" id="myTab" role="tablist">
 			<li class="nav-item">
-				<a class="nav-link active" id="general-tab" data-toggle="tab" href="#general" role="tab"
+				<a class="nav-link active" id="general-tab" data-bs-toggle="tab" href="#general" role="tab"
 					aria-controls="general" aria-selected="true">Общее</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" id="settings-tab" data-toggle="tab" href="#settings" role="tab"
+				<a class="nav-link" id="settings-tab" data-bs-toggle="tab" href="#settings" role="tab"
 					aria-controls="settings" aria-selected="false">Настройки</a>
 			</li>
 			<!-- Добавьте дополнительные вкладки здесь -->
