--- a/germax-frontend/src/templates/mocks/users/teacher/dashboard.html
+++ b/germax-frontend/src/templates/mocks/users/teacher/dashboard.html
@@ -20,15 +20,15 @@
 			<div class="collapse navbar-collapse justify-content-end" id="navbarSupport">
 				<ul class="navbar-nav align-items-center">
 					<li class="nav-item">
-						<a class="nav-link" href="./subpages/nav/notfifcations.html" data-toggle="modal"
-							data-target="#notificationsModal">
+						<a class="nav-link" href="./subpages/nav/notfifcations.html" data-bs-toggle="modal"
+							data-bs-target="#notificationsModal">
 							<i class="fa fa-bell">Notifications</i>
 							<span class="badge badge-danger">3</span>
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="./subpages/support.html" data-toggle="modal"
-							data-target="#supportModal">
+						<a class="nav-link" href="./subpages/support.html" data-bs-toggle="modal"
+							data-bs-target="#supportModal">
 							<i class="fa fa-question-circle">Support</i>
 						</a>
 					</li>
@@ -38,7 +38,7 @@
 						</a>
 					</li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-bs-toggle="dropdown"
 							aria-haspopup="true" aria-expanded="false">
 							<i class="fa fa-user"></i>
 						</a>
@@ -64,7 +64,7 @@
 					locations</a>
 				<a class="nav-link" id="indicateursLink" href="./subpages/loansRequests/loansRequest.html">Louer un
 					nouveau matériel</a>
-				<a class="nav-link active" id="rentalHistoryLink" href="./subpages/loansRequests/rentalHistory.html" data-toggle="pill">История
+				<a class="nav-link active" id="rentalHistoryLink" href="./subpages/loansRequests/rentalHistory.html" data-bs-toggle="pill">История
 					аренды и статус бронирований</a>
 			</div>
 			<div class="content">
