--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -25,6 +25,7 @@
 		</div>
 		<div class="col-md-9">
 			<div id="myLoans"></div>
+			<div id="modalRequestLoan"></div>
 			<!-- Содержимое выбранной секции -->
 		</div>
 	</div>
