--- a/germax-frontend/src/templates/components/content-page-login/index.html
+++ b/germax-frontend/src/templates/components/content-page-login/index.html
@@ -7,7 +7,7 @@
 					<form method="POST" action="../../controllers/LoginController.php" id="loginForm">
 						<div class="mb-3">
 							<label for="loginEmail" class="form-label">Email address</label>
-							<input type="email" class="form-control" id="loginEmail" name="mail" placeholder="Enter your email">
+							<input type="email" class="form-control" id="loginEmail" name="email" placeholder="Enter your email">
 						</div>
 						<div class="mb-3">
 							<label for="loginPassword" class="form-label">Password</label>
