--- a/germax-frontend/src/templates/components/content-page-registration/index.html
+++ b/germax-frontend/src/templates/components/content-page-registration/index.html
@@ -21,7 +21,7 @@
 						</div>
 						<div class="mb-3">
 							<label for="inputEmail" class="form-label">Adresse mail</label>
-							<input type="email" class="form-control" id="inputEmail" name="mail" placeholder="Enter your best email">
+							<input type="email" class="form-control" id="inputEmail" name="email" placeholder="Enter your best email">
 						</div>
 						<div class="mb-3">
 							<label for="inputPassword" class="form-label">Mot de passe</label>
@@ -34,8 +34,8 @@
 								placeholder="Confirm Password">
 						</div>
 						<div class="mb-3">
-							<label for="typeOfUser" class="form-label">Type d'utilisateur</label>
-							<select class="form-control" name="typeOfUser">
+							<label for="type-permission" class="form-label">Type d'utilisateur</label>
+							<select class="form-control" name="type-permission">
 								<option value="admin">Admin</option>
 								<option value="rental-manager">Manager</option>
 								<option value="stockman">Gestionnaire de stocks</option>
