--- a/germax-frontend/src/templates/components/content-page-login/index.html
+++ b/germax-frontend/src/templates/components/content-page-login/index.html
@@ -4,15 +4,14 @@
 			<div class="card">
 				<div class="card-body">
 					<h5 class="card-title text-center">Login</h5>
-					<form method="POST" action="../../controllers/LoginController.php" id="loginForm">
+					<form id="loginForm">
 						<div class="mb-3">
 							<label for="loginEmail" class="form-label">Email address</label>
-							<input type="email" class="form-control" id="loginEmail" name="email" placeholder="Enter your email">
+							<input type="email" class="form-control" id="loginEmail" name="email" placeholder="Enter your email" value="manager@laposte.net">
 						</div>
 						<div class="mb-3">
 							<label for="loginPassword" class="form-label">Password</label>
-							<input type="password" class="form-control" id="loginPassword" name="password"
-								placeholder="Enter your Password">
+							<input type="password" class="form-control" id="loginPassword" name="password" placeholder="Enter your Password" value="manager">
 						</div>
 						<button type="submit" class="btn btn-success btn-block">Login</button>
 					</form>
