Modal into modal with hide() error

--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -26,6 +26,7 @@
 		<div class="col-md-9">
 			<div id="myLoans"></div>
 			<div id="modalRequestLoan"></div>
+			<div id="modalLoanForm"></div>
 			<!-- Содержимое выбранной секции -->
 		</div>
 	</div>
