Historique de mes locations

--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -12,7 +12,7 @@
 		</div>
 	</nav>
 	 <!-- Контейнер для вкладок, расположенный прямо под навигацией -->
-	 <div id="tabPlace">
+	 <div id="tabPlace"></div>
     <!-- Здесь будет разметка вкладок -->
   </div>
 
@@ -25,8 +25,10 @@
 		</div>
 		<div class="col-md-9">
 			<div id="myLoans"></div>
+			<div id="clientLoansHistory"></div>
 			<div id="modalRequestLoan"></div>
 			<div id="modalLoanForm"></div>
+			<div id="modalClientLoans"></div>
 			<!-- Содержимое выбранной секции -->
 		</div>
 	</div>
