1) created adminModals.js for dynamic import of Report Modal 2) changed id titles in getAdminNav 3) moved adminReportsModal from the web page into modal

--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -23,12 +23,15 @@
 			</div>
 		</div>
 		<div class="col-md-9">
+			<!-- Содержимое для студентов и преподавателей -->
 			<div id="tabPlace"></div>
 			<div id="myLoans"></div>
 			<div id="clientLoansHistory"></div>
 			<div id="modalRequestLoan"></div>
 			<div id="modalLoanForm"></div>
 			<div id="modalClientLoans"></div>
+			<!-- Содержимое для админа -->
+			<div id="adminReportsModal"></div>
 			<!-- Содержимое выбранной секции -->
 		</div>
 	</div>
