changed admin-feedback page into modal

--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -32,6 +32,7 @@
 			<div id="modalClientLoans"></div>
 			<!-- Содержимое для админа -->
 			<div id="adminReportsModal"></div>
+			<div id="adminFeedBackModal"></div>
 			<!-- Содержимое выбранной секции -->
 		</div>
 	</div>
