resolved problem with settings modal for admin

--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -33,7 +33,7 @@
 			<!-- Содержимое для админа -->
 			<div id="adminReportsModal"></div>
 			<div id="adminFeedBackModal"></div>
-			<div id="adminSettingsModal"></div>
+			<div id="adminContainerSettingsModal"></div>
 			<!-- Содержимое выбранной секции -->
 		</div>
 	</div>
