создал модальное окно для заказа оборудования студентом или преподавателем

--- a/germax-frontend/src/templates/components/content-page-dashboard/index.html
+++ b/germax-frontend/src/templates/components/content-page-dashboard/index.html
@@ -27,6 +27,7 @@
 			<div id="tabPlace"></div>
 			<div id="myLoans"></div>
 			<div id="clientLoansHistory"></div>
+			<div id="modalNewStudentOrTeacherRequest"></div>
 			<div id="modalRequestLoan"></div>
 			<div id="modalLoanForm"></div>
 			<div id="modalClientLoans"></div>
