--- a/germax-frontend/src/templates/components/content-page-bookings-management/index.html
+++ b/germax-frontend/src/templates/components/content-page-bookings-management/index.html
@@ -17,7 +17,7 @@
 					<table class="table table-hover" id="booking-table">
 						<thead>
 							<tr>
-								<th>ID<button class="btn btn-link p-0 border-0" id="sortById"><i class="fas fa-sort"></i></button>
+								<th>ID de l'équipement<button class="btn btn-link p-0 border-0" id="sortById"><i class="fas fa-sort"></i></button>
 								</th>
 								<th>Nom du locataire</th>
 								<th>Modèle à louer<button class="btn btn-link p-0 border-0" id="sortByName"
